# ffmpeg-smart-trim

./: LICENSE  README.md  requirements.txt  setup.cfg
src/ffmpeg_smart_trim/: trim.py
