[metadata]
name = ffmpeg-smart-trim
version = 0.0.1
author = Jackie Yang
author_email = jackie@jackieyang.me
description = Smart trim with FFMPEG
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/valkjsaaa/ffmpeg-smart-trim
project_urls =
    Bug Tracker = https://github.com/valkjsaaa/ffmpeg-smart-trim/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
